--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "6.14.0",
     "@yeger/vue-masonry-wall": "^5.1.4",
+    "aos": "^2.3.4",
     "lucide-vue-next": "^0.554.0",
     "nuxt": "^4.2.1",
     "vue": "^3.5.24",
